--- a/styles.css
+++ b/styles.css
@@ -262,6 +262,199 @@ body{
 
 }
 
+.box-about{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    width: 50%;
+    padding: 3rem;   
+}
+
+.section-subtitle h2 p{
+    display: inline-block;
+    font-size: 3rem;
+}
+
+.section-subtitle h2 p:nth-child(2) {
+    font-size: 20px;
+    }
+
+.section-subtitle h2 p:nth-child(2) span {
+    padding: 3px 5px;
+    border-radius: 4px;
+    color: var(--color-black);
+    background: var(--color-white);
+}
+
+.box-about h3{
+    margin: 3rem;
+    font-size: 2rem;  
+}
+
+.box-about h3 p{
+    display: inline-block;
+
+    width: fit-content;
+    padding: 2px 4px;
+    border-radius: 4px;
+
+    color: var(--color-black);
+    background: var(--color-purple);
+}
+
+.box-about h4{
+    margin: 1rem 3rem;
+    font-size: 1.5rem;
+}
+
+.box-about h4 p{
+    display: inline;
+    padding: 2px 4px;
+
+    color: var(--color-purple);
+    font-size: bold;
+    font-weight: 1.75rem;
+}
+
+.button-cta{
+    display: flex;
+
+    max-width: 190px;
+    margin: 4rem 3rem;
+}
+
+.button-cta button{
+    display: inline-block;
+    width: 100%;
+    max-width: 172px;
+
+    padding: 10px;
+    margin-bottom: 3rem;
+
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    letter-spacing: 0.15rem;
+
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.button-cta button:hover{
+    transition: all .3s ease;
+    filter: brightness(.8);
+}
+
+#projects{
+    height: 100vh;
+    width: 100%;
+    background: var(--color-black);
+
+    display: flex;
+    flex-direction: column;
+}
+
+.projects-title{
+    margin: 3rem;
+    padding: 1rem;
+
+    font-size: 23px;
+    color: var(--color-white);
+}
+
+.wrapper-projects{
+    display: flex;
+    margin-top: 2rem;
+    
+    height: 500px;
+
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.card-project{
+    width: 320px;
+    height: 450px;
+
+    padding: 30px 20px 20px;
+    margin: 0px 10px;
+    position: relative;
+    background: var(--color-white);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    border-radius: 20px;
+}
+
+.card-project::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    height: 40%;
+    width: 100%;
+    background: var(--color-purple);
+    border-radius: 20px 20px 0px 0px;
+}
+
+.content-project{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+}
+
+.image-project{
+    height: 240px;
+    width: 250px;
+    position: relative;
+    border-radius: 30px;
+    overflow: hidden;
+    border: 4px solid var(--color-purple);
+    margin: 0 auto;
+}
+
+.image-project img{
+    height: 100%;
+    width: 100%;
+    border-radius: 30px;
+    border: 2px solid var(--color-white);
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    transition: transform .3s ease-out;
+    cursor: pointer;
+}
+
+.image-project img:hover{
+    transform: scale(1.1);
+}
+
+.content-project span{
+    color: var(--color-black);
+    font-weight: bold;
+    font-size: 1.7rem;
+    margin: 0.75rem auto .5rem auto;
+}
+
+.content-project p{
+    color: #3d3d4b;
+    font-weight: bold;
+    font-size: 1.1rem;
+    margin: 0rem .75rem;
+}
+
+.cta-project{
+    width: 200px;
+    margin: auto auto 15px auto;
+    
+}
+
 @keyframes written_text {
     100%{
         color: var(--color-white);
