--- a/styles.css
+++ b/styles.css
@@ -418,7 +418,7 @@ body{
     margin: 0 auto;
 }
 
-.image-project img{
+.image-project a img{
     height: 100%;
     width: 100%;
     border-radius: 30px;
@@ -453,7 +453,94 @@ body{
     width: 200px;
     margin: auto auto 15px auto;
     
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
+.cta-project a{
+    padding: 5px 16px;
+    font-size: 1.25rem;
+    color: var(--color-white);
+    background: var(--color-purple);
+    border-radius: 10px;
+    text-decoration: none;
+    transition: opacity .3s ease;
+}
+
+.cta-project a:hover{
+    opacity: .7;
+}
+
+#contacts{
+    display: flex;
+    flex-direction: column;
+    height: 40vh;
+    width: 100%;
+    background: var(--color-black);
+    color: var(--color-white);
+}
+
+.contact-icon-content h2{
+    margin: 3rem;
+    padding: 1rem;
+    font-size: 3rem;
+    color: var(--color-white);
+}
+
+.contact-icons-wrapper{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+.contact-icon-content{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0rem 3rem;
+    padding: 1rem;
+}
+
+.contact-icon{
+    height: 40px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 2rem;
+    background: var(--color-white);
+    padding: 1rem;
+    border-radius: 50%;
+}
+
+.contact-icon i{
+    font-size: 2rem;
+    color: var(--color-purple);
+}
+
+.contact-info span{
+font-size: 1.2rem;
+font-weight: bold;
+}
+
+.contact-info p{
+    font-size: 15px;
+   
+}
+
+.contact-info a{
+    font-size: 15px;
+    display: block;
+    text-decoration: none;
+    color: var(--color-white);
+}
+
+.contact-info a:hover{
+    transition: color .3s ease;
+    color: var(--color-purple);
+}
+
 
 @keyframes written_text {
     100%{
