--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,53 @@ body{
     font-size: 25px;
 }
 
+#header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 15px 30px;
+    position: fixed;
+    background: transparent;
+    z-index: 2;
+}
+
+.header-title{
+    text-decoration: none;
+}
+
+.header-title h1{
+    color: var(--color-white);
+    font-size: 2rem;
+    transition: opacity .3s ease;
+}
+
+.header-title h1:hover{
+    opacity: .8;
+}
+
+.navbar{
+    max-width: 350px;
+    width: 100%;
+}
+
+.navbar ul{
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+}
+
+.navbar ul li{
+    list-style: none;
+}
+
+.navbar ul li a{
+    text-decoration: none;
+    color: var(--color-white);
+    font-size: 1.4rem;
+    font-weight: 700;
+} 
+
 #person{
     height: 100vh;
     width: 100%;
@@ -205,7 +252,7 @@ body{
 }
 
 .links a img:hover{
-    transform: scale(1.15);
+    transform: scale(1.10);
     filter: brightness(1);
 }
 
