--- a/styles.css
+++ b/styles.css
@@ -513,9 +513,10 @@ body{
 }
 
 .card-project p{
-    color: #3d3d4b;
+
+    color: #000000;
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: 1.50rem;
     margin: 0rem .75rem;
 }
 
