--- a/styles.css
+++ b/styles.css
@@ -283,6 +283,11 @@ body{
     align-items: center;
 }
 
+.projeto1{
+    width: 100px;
+}
+
+
 .img-wrapper{
     height: 100%;
     width: 100%;
@@ -473,7 +478,7 @@ body{
     border-radius: 30px;
     overflow: hidden;
     border: 4px solid var(--color-purple);
-    margin: 0 auto;
+    margin-left: 20px;
 }
 
 .image-project a img{
