--- a/styles.css
+++ b/styles.css
@@ -499,11 +499,16 @@ body{
 }
 
 .card-project span{
+    width: 200px;
+    position: relative;
     color: var(--color-white);
     font-weight: bold;
     font-size: 1.7rem;
-    margin: 0.75rem auto 25rem auto;
+    bottom:100px;
+    left: 50px;
 }
+
+
 
 .card-project p{
 
